Fix button and text alignment in blogs.

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,6 +1,6 @@
 * {
   background-color: #e6e6e6;
-  text-align:center;
+  text-align:left;
 }
 .left {
   text-align: left;
